collapse expand icon looks good fixed

--- a/src/app/@shared/components/sidebar/sidebar.component.scss
+++ b/src/app/@shared/components/sidebar/sidebar.component.scss
@@ -32,13 +32,14 @@
             height: 1rem;
             margin-left: auto;
             content: "";
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='1' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+            background-image: var(--bs-accordion-btn-active-icon);
             background-repeat: no-repeat;
             background-size: 1rem;
             transition: transform .2s ease-in-out;
+            transform: rotate(-90deg);
         }
         &[aria-expanded="true"]::after {
-            transform: rotate(90deg);
+            transform: rotate(0deg);
         }
     }
 
